--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ccxt==2.6.85
+
 pandas==2.0.3
 numpy==1.24.3
 python-dotenv
@@ -9,3 +9,6 @@ scikit-learn
 prometheus-client==0.16.0
 statsmodels==0.13.2
 scikit-optimize==0.9.0
+pydantic>=2.5.2
+structlog>=23.1.0
+ccxt>=4.1.59
